<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/main2"
    tools:context=".SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/hint_username"
                android:inputType="textPersonName"
                android:autofillHints="username"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <!-- Role Selection -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/role_select"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <RadioGroup
                android:id="@+id/roleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioTenant"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:minWidth="48dp"
                    android:gravity="center"
                    android:text="@string/role_tenant"
                    android:textColor="@color/black"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radioLandlord"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:minWidth="48dp"
                    android:gravity="center"
                    android:text="@string/role_landlord"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>
            </RadioGroup>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius="20dp"/>

            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_redirect"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/lavender"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
